engr441/while-infer/tests/valid/Inferred_Valid_2.while
void main() {
    var x;
    x = 1;
    assert (x == 1);
}