engr441/while-infer/tests/invalid-typing/Typing_Invalid_37.while
void f({int field} rec) {
     rec.aField = 1;
}